--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "ObiterDicta"
 uuid = "24410e7c-b831-42e4-8e51-39fbbfdf70b0"
-authors = ["Syx Pek <syx@purelymail.com> and contributors"]
+authors = ["Syx Pek and contributors"]
 version = "1.0.0-DEV"
 
 [compat]
