--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 ReplMaker = "b873ce64-0db9-51f5-a568-4457d8e49576"
 StringDistances = "88034a9c-02f8-509d-84a9-84ec65e18404"
 Term = "22787eb5-b846-44ae-b979-8e399b8463ab"
+Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 
 [compat]
 julia = "1"
