--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "ObiterDicta"
 uuid = "24410e7c-b831-42e4-8e51-39fbbfdf70b0"
 authors = ["Syx Pek and contributors"]
-version = "1.0.0-DEV"
+version = "0.1.0"
 
 [deps]
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
