--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,9 @@ Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 [weakdeps]
 UnityPy = "0a7dd6ee-3a1d-45b1-9d68-9e094689bdc2"
 
+[extensions]
+ObiterDictaUnity = "UnityPy"
+
 [compat]
 julia = "1"
 
