--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ Scratch = "6c6a2e73-6563-6170-7368-637461726353"
 StringDistances = "88034a9c-02f8-509d-84a9-84ec65e18404"
 Term = "22787eb5-b846-44ae-b979-8e399b8463ab"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
+UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
 
 [weakdeps]
 UnityPy = "0a7dd6ee-3a1d-45b1-9d68-9e094689bdc2"
