--- a/debug/Project.toml
+++ b/debug/Project.toml
@@ -1,3 +1,4 @@
 [deps]
 ObiterDicta = "24410e7c-b831-42e4-8e51-39fbbfdf70b0"
+ObiterDictaSteam = "3ed64e2b-e9be-4c13-bdcb-38b7b855ef21"
 UnityPy = "0a7dd6ee-3a1d-45b1-9d68-9e094689bdc2"
