--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,8 @@ StringManipulation = "892a3eda-7b42-436c-8928-eab12a02cf0e"
 Term = "22787eb5-b846-44ae-b979-8e399b8463ab"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
+fzf_jll = "214eeab7-80f7-51ab-84ad-2988db7cef09"
+ripgrep_jll = "e10fc14b-37cd-5cbc-b289-ad01b12ebaad"
 
 [weakdeps]
 UnityPy = "0a7dd6ee-3a1d-45b1-9d68-9e094689bdc2"
