--- a/debug/Project.toml
+++ b/debug/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 ObiterDicta = "24410e7c-b831-42e4-8e51-39fbbfdf70b0"
 ObiterDictaSteam = "3ed64e2b-e9be-4c13-bdcb-38b7b855ef21"
 UnityPy = "0a7dd6ee-3a1d-45b1-9d68-9e094689bdc2"
